--- a/style/main.css
+++ b/style/main.css
@@ -86,7 +86,7 @@ ul, li {
   text-decoration: none;
   display: block;
   margin-right: -3px;
-  margin-top: -3px;
+  margin-top: -6px;
 }
 
 .header__shedule-link{
@@ -159,6 +159,7 @@ ul, li {
 
 .section__third {
   margin-top: 147px;;
+  margin-bottom: 35px;
 }
 
 
@@ -273,6 +274,7 @@ ul, li {
   bottom: 0;
   padding: 31px 31px;
   color: #fff;
+ 
 }
 
 .news__date{
@@ -280,12 +282,14 @@ ul, li {
   font-size: 14px;
   margin-bottom: 12px;
   text-transform: lowercase;
+  display: block;
 }
 
 .news__title {
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 3px;
+  margin-bottom: -2px;
+  line-height: 36px;
 }
 
 .news{
@@ -294,7 +298,9 @@ ul, li {
 
 .news__desc {
   font-size: 16px;
-  line-height: 21px;
+  line-height: 24px;
+  min-height: 50px;
+  margin-bottom: 1px;
 }
 
 .pager {
@@ -305,7 +311,7 @@ ul, li {
 
 .pager__display,.pager__list{
   display: inline-block;
-  margin-top: -6px;
+  margin-top: -11px;
   margin-left: 14px;
   vertical-align: middle;
   color: white;
@@ -313,7 +319,7 @@ ul, li {
 
 
 .pager__display {
-  margin-right: 26px;
+  margin-right: 4px;
   
 }
 
@@ -350,10 +356,10 @@ ul, li {
 .about__desc{
   
   background: url("../img/mountains.png") center center / cover no-repeat;
-  padding: 81px 81px 85px 81px;
+  padding: 75px 202px 83px 81px;
   width: 785px;
   margin-left: -140px;
-  margin-top: 107px;
+  margin-top: 88px;
   display: inline-block;
 
 }
@@ -363,11 +369,15 @@ ul, li {
 .about__title{
   font-weight: bold;
   font-size: 36px;
-  margin-bottom: 37px;
+  margin-bottom: 41px;
+  margin-top: 0px;
 }
 
 .about__desc-text {
-  margin-bottom: 43px;
+  margin-bottom: 60px;
+  line-height: 27px;
+  letter-spacing: 0.43px;
+  min-height: 135px;
 
 }
 
@@ -391,27 +401,28 @@ ul, li {
 
 .footer__logo {
   margin-right: 78px;
-  margin-top: 77px;
+  margin-top: 43px;
 }
 
 .footer__shedule {
   color:#9A9A9A;
   font-size: 11px;
-  margin-top: 49px;
+  margin-top: 43px;
+  text-align: right;
  
   
 }
 
 .contacts__description {
   
-  float: right;
+  margin-bottom: 8px;
 }
 
 
 .social__item {
   display: inline-block;
   vertical-align: middle;
-  margin-right: 10px;
+  margin-right: 6px;
 }
 
 .social__item:last-child{
@@ -419,8 +430,8 @@ ul, li {
 }
 
 .socials {
-  top: 84px;
-  right: 259px;
+  top: 45px;
+  right: 261px;
   position: absolute;
 }
 
