--- a/project/style/blocks/socials.css
+++ b/project/style/blocks/socials.css
@@ -21,33 +21,33 @@
 }
 
 .social__item--icon--telegram .social__link {
-  background-image: url(/img/telegram.png);
+  background-image: url(../../img/telegram.png);
 }
 
 .social__item--icon--telegram .social__link:hover {
-  background-image: url(/img/t-hover.png);
+  background-image: url(../../img/t-hover.png);
 }
 
 .social__item--icon--vk .social__link {
-  background-image: url(/img/vk.png);
+  background-image: url(../../img/vk.png);
 }
 
 .social__item--icon--vk .social__link:hover {
-  background-image: url(/img/vk-hover.png);
+  background-image: url(../../img/vk-hover.png);
 }
 
 .social__item--icon--fb .social__link {
-  background-image: url(/img/f.png);
+  background-image: url(../../img/f.png);
 }
 
 .social__item--icon--fb .social__link:hover {
-  background-image: url(/img/f-hover.png);
+  background-image: url(../../img/f-hover.png);
 }
 
 .social__item--icon--instagram .social__link {
-  background-image: url(/img/in.png);
+  background-image: url(../../img/in.png);
 }
 
 .social__item--icon--instagram .social__link:hover {
-  background-image: url(/img/in-hover.png);
+  background-image: url(../../img/in-hover.png);
 }
